Redesign partnership page Ui

--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 :root {
   --primary: #0e88d8;
-  --theme-blue: #0F88D9;
+  --theme-blue: #0f88d9;
   --secondary: #eb9572;
   --text-dark: #454545;
-  --smoke-white: #F5F5F5;
-  --Montserrat: "Montserrat", sans-serif
+  --smoke-white: #f5f5f5;
+  --Montserrat: "Montserrat", sans-serif;
 }
 
 * {
   font-family: var(--Montserrat);
+  scroll-behavior: smooth;
 }
 
 a {
@@ -28,7 +29,6 @@ a {
 li {
   list-style: none;
 }
-
 
 @media (prefers-color-scheme: light) {
   :root {
