--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,60 @@
-.capitalize{
+.capitalize {
     text-transform: capitalize;
 }
 
-.circle{
+.circle {
     width: 2rem !important;
     height: 2rem !important;
     background-color: red !important;
 
+}
+
+.schedule-page-container {
+    padding: 2rem;
+    background-color: #f9f9f9;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 1rem;
+    /* Adjusts spacing between rows and columns */
+    margin-top: 2rem;
+}
+
+.day-label {
+    font-weight: bold;
+    padding: 0.5rem 1rem;
+}
+
+.day-content {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.time-slot {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.add-button,
+.delete-button {
+    display: flex;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 4px;
+}
+
+.add-button {
+    color: var(--theme-blue);
+    color: #303030;
+}
+
+.delete-button {
+    /* background-color: #ff4d4d; */
+    color: white;
+    color: #ff4d4d;
+    /* cursor: pointer; */
 }
